update flower and css

--- a/index.html
+++ b/index.html
@@ -3,25 +3,50 @@
   <head>
     <meta charset="utf-8">
     <title>5 favorite things</title>
+    <style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 250px;
+  width: 300px;
+}
+h1, h3, p{
+
+  text-align: center;
+}
+
+</style>
   </head>
   <body>
 <h1>Favorite Flowers</h1>
 <h3>Blue Rose</h3>
 <img src="images/rose1.jpeg" alt="rose">
 <p>A blue rose is a flower of the genus Rosa (family Rosaceae) that presents blue-to-violet pigmentation instead of the more common red, white, or yellow. Blue roses are often used to symbolise secret or unattainable love. However, because of genetic limitations, they do not exist in nature.</p>
-<cite><a href="https://www.pexels.com/photo/nature-red-love-romantic-67636/">Source for blue rose something</a></cite>
+<p><cite><a href="https://www.pexels.com/photo/nature-red-love-romantic-67636/">Source for blue rose something</a></cite></p>
 
 <h3>Pink Roses</h3>
 <img src="images/rose2.jpg" alt="Pink Rose">
 <p>Usually, pink roses are used to express gentle emotions such as admiration, joy, gratitude and deep or endless love. Dark pink – Deep pink rose blooms may mean deep gratitude and appreciation. Dark pink roses also express elegance and grace. Light pink – Light pink rose blooms are symbols of pleasantness and innocence</p>
-<cite> <a href="https://simple.wikipedia.org/wiki/Rose">Pink Rose Information</a> </cite>
+<p><cite> <a href="https://simple.wikipedia.org/wiki/Rose">Pink Rose Information</a> </cite></p>
 
 
 <h3>Purple Roses</h3>
 <img src="images/rose3.jpg" alt="purple rose">
 <p>Roses often mean love. Did you know that different colored roses can have different meanings? Today let’s talk about the stunning purple rose. Often known as the “mystical rose” because it can give off the vibes of royalty, enchantment, and majesty.
-
-
 The purple rose can come in a variety of shades and the lighter shades are associated with love at first sight as well as true love. The darker shades mean more of a long-term love and romance</p>
+
+
+<h3>orange rose</h3>
+<img src="images/rose4.jpg" alt="orange rose">
+
+<p>A pale light orange rose with a large star shaped bloom. This is one of more than 90 Roses Online Globalrose offers.</p>
+<p><cite> <a href="https://globalrose.com/flowers/movie-star-qty.html">Orange rose</a> </cite></p>
+
+<h3>orange rose</h3>
+<img src="images/rose4.jpg" alt="orange rose">
+
+<p>A pale light orange rose with a large star shaped bloom. This is one of more than 90 Roses Online Globalrose offers.</p>
+<p><cite> <a href="https://globalrose.com/flowers/movie-star-qty.html">Orange rose</a> </cite></p>
 </body>
 </html>
