update background color

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ h1, h3, p{
 
 </style>
   </head>
-  <body>
+  <body bgcolor="grey">
 <h1>Favorite Flowers</h1>
 <h3>Blue Rose</h3>
 <img src="images/rose1.jpeg" alt="rose">
